force-app/main/default/objects/Edition__c/fields/Late__c.field-meta.xml
<CustomField>
    <fullName>Late__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked apply late price based on standard cutoff date, otherwise take standard price</description>
    <inlineHelpText>If checked apply late price based on standard cutoff date, otherwise take standard price</inlineHelpText>
    <label>Late</label>
    <type>Checkbox</type>
</CustomField>