force-app/main/default/objects/Edition__c/fields/Late_Rate_Description__c.field-meta.xml
<CustomField>
    <fullName>Late_Rate_Description__c</fullName>
    <description>Late Rate Description.</description>
    <label>Late Rate Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>