force-app/main/default/objects/Edition__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <description>This field is used to fetch the legal entity name from event series as per ticket no IML2R-135.</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Part_of_Series__r.Legal_Entity__c,Part_of_Series__r.Legal_Entity__r.Name,&quot;_blank&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to fetch the legal entity name from event series.</inlineHelpText>
    <label>Legal Entity</label>
    <type>Text</type>
</CustomField>