force-app/main/default/objects/Edition__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <description>Define the LinkedIn Url on LinkedIn icon on customer portal</description>
    <inlineHelpText>Define the LinkedIn URL.</inlineHelpText>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>