force-app/main/default/objects/Edition__c/fields/Live_Agent_Online__c.field-meta.xml
<CustomField>
    <fullName>Live_Agent_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this checkbox will show live chat button on customer center.</description>
    <inlineHelpText>Check the checkbox if Live Chat need to show on customer center.</inlineHelpText>
    <label>Live_Agent_Online</label>
    <type>Checkbox</type>
</CustomField>