force-app/main/default/objects/Edition__c/fields/Logo_Doc_ID__c.field-meta.xml
<CustomField>
    <fullName>Logo_Doc_ID__c</fullName>
    <description>Document ID for stored logo.</description>
    <inlineHelpText>Document ID for stored logo.</inlineHelpText>
    <label>Logo Doc ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>