force-app/main/default/objects/Edition__c/fields/Logo_Merge_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_Merge_URL__c</fullName>
    <description>Merge Field used for template</description>
    <formula>$Setup.Logo_URL_Prefix__c.URL_prefix__c &amp; Logo_Doc_ID__c &amp; &quot;&amp;oid=&quot; &amp;  $Setup.Logo_URL_Prefix__c.Company_Information_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Merge URL</label>
    <type>Text</type>
</CustomField>