force-app/main/default/objects/Edition__c/fields/Logo_Shape__c.field-meta.xml
<CustomField>
    <fullName>Logo_Shape__c</fullName>
    <label>Logo Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Long Rectangle</fullName>
            </value>
            <value>
                <fullName>Small Square</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>