force-app/main/default/objects/Edition__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>This Formula Text forms the URL for the Logo.</description>
    <formula>HYPERLINK($Setup.Logo_URL_Prefix__c.URL_prefix__c &amp;  Logo_Doc_ID__c &amp; &quot;&amp;oid=&quot; &amp;  $Setup.Logo_URL_Prefix__c.Company_Information_ID__c , &quot;Click to see logo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo URL</label>
    <type>Text</type>
</CustomField>