force-app/main/default/objects/Edition__c/fields/Max_Hold_Booth__c.field-meta.xml
<CustomField>
    <fullName>Max_Hold_Booth__c</fullName>
    <inlineHelpText>Number of Booth can be held without approval.</inlineHelpText>
    <label>Max Hold Booth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>