force-app/main/default/objects/Edition__c/fields/Max_Hold_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Hold_Days__c</fullName>
    <inlineHelpText>Number of days a Booth/Stand can be held</inlineHelpText>
    <label>Max Hold Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>