force-app/main/default/objects/Edition__c/fields/No_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>No_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On checking this checkbox true, invoice can&apos;t be created on any associated opportunity.</description>
    <inlineHelpText>On checking this checkbox true, invoice can&apos;t be created on any associated opportunity.</inlineHelpText>
    <label>No Invoicing</label>
    <type>Checkbox</type>
</CustomField>