force-app/main/default/objects/Edition__c/fields/No_Order_Creation__c.field-meta.xml
<CustomField>
    <fullName>No_Order_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On checking this checkbox true, order cannot be created on any associated opportunity.</description>
    <inlineHelpText>On checking this checkbox true, order cannot be created on any associated opportunity.</inlineHelpText>
    <label>No Order Creation</label>
    <type>Checkbox</type>
</CustomField>