force-app/main/default/objects/Edition__c/fields/Operations_Team__c.field-meta.xml
<CustomField>
    <fullName>Operations_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refer to the operation team managing this event</description>
    <label>Operations Team</label>
    <referenceTo>Operations_Team__c</referenceTo>
    <relationshipLabel>Edition</relationshipLabel>
    <relationshipName>Edition</relationshipName>
    <type>Lookup</type>
</CustomField>