force-app/main/default/objects/Edition__c/fields/Opportunity_Status_When_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status_When_Ordering__c</fullName>
    <defaultValue>&apos;Awaiting Payment&apos;</defaultValue>
    <description>Opportunity Status after which Order creation will happen through automation.</description>
    <label>Opportunity Status When Ordering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>