force-app/main/default/objects/Edition__c/fields/Order_Activation__c.field-meta.xml
<CustomField>
    <fullName>Order_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order Activation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</description>
    <inlineHelpText>Order Activation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</inlineHelpText>
    <label>Order Activation</label>
    <type>Checkbox</type>
</CustomField>