force-app/main/default/objects/Edition__c/fields/Order_Creation__c.field-meta.xml
<CustomField>
    <fullName>Order_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order Creation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</description>
    <inlineHelpText>Order Creation for this Edition is Automated. If unchecked, a user with the correct permission set will have access to execute this Action</inlineHelpText>
    <label>Order Creation</label>
    <type>Checkbox</type>
</CustomField>