force-app/main/default/objects/Edition__c/fields/Part_of_Series__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Series__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup store value of series this edition is part of</description>
    <label>Part of Series</label>
    <referenceTo>Series__c</referenceTo>
    <relationshipLabel>Edition</relationshipLabel>
    <relationshipName>Event_Edition</relationshipName>
    <type>Lookup</type>
</CustomField>