force-app/main/default/objects/Edition__c/fields/Payment_Schedule_2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_2__c</fullName>
    <description>Payment Schedules defined at Edition level for Invoice Plan Products.</description>
    <label>Payment Schedule 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50-50</fullName>
            </value>
            <value>
                <fullName>10-40-50</fullName>
            </value>
            <value>
                <fullName>10-45-45</fullName>
            </value>
            <value>
                <fullName>25-25-50</fullName>
            </value>
            <value>
                <fullName>25-25-25-25</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>