force-app/main/default/objects/Edition__c/fields/PDF_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_Logo_URL__c</fullName>
    <description>This Formula Text forms the URL for the PDF Logo.</description>
    <formula>$Setup.Logo_URL_Prefix__c.URL_prefix__c &amp; Edition_Image_URL__c &amp; &quot;&amp;oid=&quot; &amp; $Setup.Logo_URL_Prefix__c.Company_Information_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Logo URL</label>
    <type>Text</type>
</CustomField>