force-app/main/default/objects/Edition__c/fields/PRule_Category__c.field-meta.xml
<CustomField>
    <fullName>PRule_Category__c</fullName>
    <description>Product Rule Category. Used for CPQ Settings.</description>
    <label>PRule_Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PRule_Category</valueSetName>
    </valueSet>
</CustomField>