force-app/main/default/objects/Edition__c/fields/Quote_Template__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Lookup store the id of the associated Quote Template.</description>
    <label>Quote Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Edition (Quote Template)</relationshipLabel>
    <relationshipName>Event_Edition</relationshipName>
    <type>Lookup</type>
</CustomField>