force-app/main/default/objects/Edition__c/fields/Quote_Terms_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Quote_Terms_Identifier__c</fullName>
    <description>This field stores the identifier of Quote Terms.</description>
    <inlineHelpText>A001 - Ungerboeck Events except Arab Health, 2017
B001 - All Phoenix
C001 - Arab Health
D001 - Ungerboeck Events except Arab Health, 2018</inlineHelpText>
    <label>Quote Terms Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>