force-app/main/default/objects/Edition__c/fields/Require_SSC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Require_SSC_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked All Deals need SSC approval.</description>
    <label>Require SSC Approval</label>
    <type>Checkbox</type>
</CustomField>