force-app/main/default/objects/Edition__c/fields/SalesOps_Services_Team__c.field-meta.xml
<CustomField>
    <fullName>SalesOps_Services_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOps Services Team</label>
    <referenceTo>Customer_Services_Team__c</referenceTo>
    <relationshipLabel>Edition (SalesOps Services Team)</relationshipLabel>
    <relationshipName>Edition1</relationshipName>
    <type>Lookup</type>
</CustomField>