force-app/main/default/objects/Edition__c/fields/Send_Welcome_email__c.field-meta.xml
<CustomField>
    <fullName>Send_Welcome_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Welcome email</label>
    <type>Checkbox</type>
</CustomField>