force-app/main/default/objects/Edition__c/fields/Show_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Show_Deliverables__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck the checkbox to hide deliverables on the quote/contract template.</description>
    <inlineHelpText>Uncheck the checkbox to hide deliverables on the quote/contract template.</inlineHelpText>
    <label>Show Deliverables</label>
    <type>Checkbox</type>
</CustomField>