force-app/main/default/objects/Edition__c/fields/Show_Hours__c.field-meta.xml
<CustomField>
    <fullName>Show_Hours__c</fullName>
    <description>Using on customer portal footer to display show timing.</description>
    <inlineHelpText>Using on customer portal footer to display show timing.</inlineHelpText>
    <label>Show Hours</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>