force-app/main/default/objects/Edition__c/fields/show_recordid__c.field-meta.xml
<CustomField>
    <fullName>show_recordid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Show record Id on Invoive PDF.</description>
    <label>show recordid</label>
    <type>Checkbox</type>
</CustomField>