force-app/main/default/objects/Edition__c/fields/SizedLogo__c.field-meta.xml
<CustomField>
    <fullName>SizedLogo__c</fullName>
    <formula>IF( ISPICKVAL(Logo_Shape__c, &apos;Rectangle&apos;), IMAGE(PDF_Logo_URL__c, &quot;Rectangle&quot;, 100, 200), If(ISPICKVAL(Logo_Shape__c, &apos;Long Rectangle&apos;), IMAGE(PDF_Logo_URL__c, &quot;Long Rectangle&quot;, 50, 250), If(ISPICKVAL(Logo_Shape__c, &apos;Square&apos;), IMAGE(PDF_Logo_URL__c, &quot;Square&quot;, 200, 200), IMAGE(PDF_Logo_URL__c, &quot;Small Square&quot;, 100, 100))))</formula>
    <label>Edition Logo</label>
    <type>Text</type>
</CustomField>