force-app/main/default/objects/Edition__c/fields/Stand_Design_Completion_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Stand_Design_Completion_Due_Date__c</fullName>
    <description>Stand Design Completion Due Date</description>
    <label>Stand Design Completion Due Date</label>
    <type>Date</type>
</CustomField>