force-app/main/default/objects/Edition__c/fields/Stand_Setting__c.field-meta.xml
<CustomField>
    <fullName>Stand_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LookUp for Stand Setting</description>
    <label>Stand Setting</label>
    <referenceTo>Stand_Setting__c</referenceTo>
    <relationshipLabel>Edition</relationshipLabel>
    <relationshipName>Edition</relationshipName>
    <type>Lookup</type>
</CustomField>