force-app/main/default/objects/Edition__c/fields/Standard_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Standard_Cutoff__c</fullName>
    <description>Standard Price Plan cutoff date. After that we would use Late Price Plan</description>
    <inlineHelpText>Standard Price Plan cutoff date. After that we would use Late Price Plan</inlineHelpText>
    <label>Standard Cutoff</label>
    <type>Date</type>
</CustomField>