force-app/main/default/objects/Edition__c/fields/Standard_Rate_Description__c.field-meta.xml
<CustomField>
    <fullName>Standard_Rate_Description__c</fullName>
    <description>Standard Rate Description</description>
    <label>Standard Rate Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>