force-app/main/default/objects/Edition__c/fields/Subsequent_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conga Email Template For Invoice PDF.</description>
    <label>Subsequent Email Template</label>
    <referenceTo>APXTConga4__Conga_Email_Template__c</referenceTo>
    <relationshipName>Event_Edition1</relationshipName>
    <type>Lookup</type>
</CustomField>