force-app/main/default/objects/Edition__c/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <inlineHelpText>Customer Services Email</inlineHelpText>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>