force-app/main/default/objects/Edition__c/fields/Tab1__c.field-meta.xml
<CustomField>
    <fullName>Tab1__c</fullName>
    <description>(Not in Use)</description>
    <label>Tab1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>