force-app/main/default/objects/Edition__c/fields/Tab2__c.field-meta.xml
<CustomField>
    <fullName>Tab2__c</fullName>
    <description>(Not in Use)</description>
    <label>Tab2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>