force-app/main/default/objects/Edition__c/fields/Tab3__c.field-meta.xml
<CustomField>
    <fullName>Tab3__c</fullName>
    <description>(Not in Use)</description>
    <label>Tab3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>