force-app/main/default/objects/Edition__c/fields/Tax_Rule__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rule__c</fullName>
    <description>To mark if there needs a check for &quot;UAE VAT Refund&quot;.</description>
    <label>Tax Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE VAT Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>