force-app/main/default/objects/Edition__c/fields/Text_Colour__c.field-meta.xml
<CustomField>
    <fullName>Text_Colour__c</fullName>
    <description>Define the branding color of the text of footer</description>
    <inlineHelpText>Define the branding color of the text of footer</inlineHelpText>
    <label>Text Colour</label>
    <length>50</length>
    <type>Text</type>
</CustomField>