force-app/main/default/objects/Edition__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <description>Define redirect URL for the Twitter icon on customer portal.</description>
    <inlineHelpText>Define the Twitter URL.</inlineHelpText>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>