force-app/main/default/objects/Edition__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <description>This Field store the venue of Edition.</description>
    <label>Venue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>