force-app/main/default/objects/Edition__c/fields/Welcome_Email_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Job_Status__c</fullName>
    <label>Welcome Email Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>