force-app/main/default/objects/Edition__c/fields/Whatsapp_Number__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Number__c</fullName>
    <description>Team&apos;s Whatsapp Number</description>
    <inlineHelpText>Team&apos;s Whatsapp Number</inlineHelpText>
    <label>Whatsapp Number</label>
    <type>Phone</type>
</CustomField>