force-app/main/default/objects/Edition__c/fields/X1st_Stage_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>X1st_Stage_Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conga Email Template For Invoice PDF.</description>
    <label>1st Stage Email Template</label>
    <referenceTo>APXTConga4__Conga_Email_Template__c</referenceTo>
    <relationshipName>Event_Edition</relationshipName>
    <type>Lookup</type>
</CustomField>