force-app/main/default/objects/Edition__c/fields/X3rd_Party_ERP_System__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_ERP_System__c</fullName>
    <description>External 3rd Party System Name</description>
    <label>3rd Party ERP System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X3rd_Party_ERP_System</valueSetName>
    </valueSet>
</CustomField>