force-app/main/default/objects/Edition__c/fields/YouTube__c.field-meta.xml
<CustomField>
    <fullName>YouTube__c</fullName>
    <description>Define redirect URL for the you tube icon on customer portal.</description>
    <inlineHelpText>Define the You Tube URL.</inlineHelpText>
    <label>YouTube</label>
    <type>Url</type>
</CustomField>