force-app/main/default/objects/Edition__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Event</description>
    <label>Event</label>
</RecordType>