force-app/main/default/objects/Edition__c/validationRules/Event_Edition_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Edition_Status</fullName>
    <active>true</active>
    <description>This validation rule will call once the legal entity field is blank on having the edition status active.</description>
    <errorConditionFormula>IF( 
							AND( 
								ISPICKVAL(Edition_Status__c, &apos;Active&apos;) ,  ISBLANK( Legal_Entity__c ) 
							), true,false)</errorConditionFormula>
    <errorMessage>Legal Entity cannot be blank when Edition Status is Active</errorMessage>
</ValidationRule>