force-app/main/default/objects/Edition__c/listViews/Edition_All.listView-meta.xml
<ListView>
    <fullName>Edition_All</fullName>
    <columns>NAME</columns>
    <columns>Edition_Status__c</columns>
    <columns>Edition_Code__c</columns>
    <columns>Part_of_Series__c</columns>
    <columns>Customer_Support_Team__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Edition All</label>
</ListView>